tests/snapshots/e2e__suggest_dedup@extract-local-refs.snap
---
source: tests/e2e.rs
expression: out
---
dedup  1 workflow cluster  (threshold=0.80)

CLUSTER 1
metric           value
workflows        2
representative   .github/workflows/b.yml
triggers differ  no

MEMBERS
member                   similarity
.github/workflows/c.yml  0.86

USES
label      value
common     ext:actions/checkout, local-action:.github/actions/setup, local-wf:.github/workflows/reusable.yml
divergent  (none)
