tests/snapshots/e2e__suggest_extract@concurrency-input-expression.snap
---
source: tests/e2e.rs
expression: out
---
extract  no extraction candidates  (min-length=3, min-occurrences=2)
