tests/snapshots/e2e__trace_push@actionlint-findings.snap
---
source: tests/e2e.rs
expression: out
---
trace push  2 entry workflows

╭─ push   (filters=none)
├─→ .github/workflows/ci.yaml  [wf]
│
╰─→ .github/workflows/release.yaml  [wf]
