tests/snapshots/e2e__trace_push@composite-invokes-composite.snap
---
source: tests/e2e.rs
expression: out
---
trace push  1 entry workflow

╭─ push   (filters=none)
╰─→ .github/workflows/ci.yml  [wf]
    ├─→ actions/checkout  [ext-ac]  @v4
    ╰─→ .github/actions/setup-toolchain  [ac]
        ╰─→ .github/actions/fetch-deps  [ac]
            ╰─→ actions/cache  [ext-ac]  @v4
